--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -6,9 +6,13 @@
     --bs-gray-500:#adb5bd;
 
   }
-
+p {
+    font-size: 0.9em;
+    margin-bottom: 1.15rem;
+  }
+  
 html[data-theme=light] {
-    --pst-color-secondary: #252627; /*change the secondary color, header link to gray */
+    --pst-color-secondary: #3d3d3d; /*change the secondary color, header link to gray */
     --pst-color-link-hover: #25262; /*change the side bar link color to black */
     --pst-color-table-row-hover-bg: #f8f9fa; /*change the table row hover color to light gray */
     --sd-color-secondary: gray; /*change the secondary color to black */
