--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -5,12 +5,16 @@
     --pst-color-logo: #2EB5EB;
     --bs-gray-500:#adb5bd;
 
-  }
+
+}
+.theme-version {
+  display: none;
+}
 p {
     font-size: 0.9em;
     margin-bottom: 1.15rem;
   }
-  
+
 html[data-theme=light] {
     --pst-color-secondary: #3d3d3d; /*change the secondary color, header link to gray */
     --pst-color-link-hover: #25262; /*change the side bar link color to black */
@@ -27,7 +31,7 @@ h1{
     font-size: 2rem; /* make the h1 in the code smaller */
 }
 /* .bd-page-width {
-    max-width: 100%; 
+    max-width: 100%;
   } */
 
 .sig-name {
